@@ -15,3 +15,11 @@ class Hash
   end
   
 end
+
+unless Array.respond_to?(:extract_options!)
+  class Array
+    def extract_options!
+      last.is_a?(::Hash) ? pop : {}
+    end
+  end
+end
